Replace use of get(0) with getFirst() to retrieve the first item from an array list.